# amrex-miniSMC

./: CMakeLists.txt  README.md
inputs/: inputs_smc
src/: Mechanism.cpp  MiniSMC.H  MiniSMC.cpp  SMCKernels.H  SMCKernels.cpp  main.cpp
